0.2.1. Fix up tests that were broken by downgrading to Java 11.